# camara-senadores-mex

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
scripts/: validate_dataset.py
senado_scrapy/: db.py  items.py  pipelines.py  settings.py
senado_scrapy/spiders/: senadores.py  votaciones.py
tests/: test_votaciones_spider.py
tests/fixtures/: votacion_page_no_viewtable.html  votacion_page_viewtable.html  votes_ajax.html
