[project]
name = "senado-scrapy"
version = "0.1.0"
description = "Scrapy spiders for Mexican Senate voting data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy",
    "scrapy-impersonate>=1.6.3",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["senado_scrapy"]
